--- a/stable/latest/book/todo_4.html
+++ b/stable/latest/book/todo_4.html
@@ -489,7 +489,7 @@ impl AdwApplicationWindowImpl for Window {}</code></pre>
 </span><span class="boring">impl Window {
 </span><span class="boring">    pub fn new(app: &amp;adw::Application) -&gt; Self {
 </span><span class="boring">        // Create new window
-</span><span class="boring">        Object::builder().property(&quot;application&quot;, app).build()
+</span><span class="boring">        Object::new(&amp;[(&quot;application&quot;, app)])
 </span><span class="boring">    }
 </span><span class="boring">
 </span><span class="boring">    fn setup_settings(&amp;self) {
@@ -866,11 +866,8 @@ impl ObjectSubclass for CollectionObject {
 </span><span class="boring">}
 </span><span class="boring">
 </span><span class="boring">impl CollectionObject {
-</span><span class="boring">    pub fn new(title: &amp;str, tasks: gio::ListStore) -&gt; Self {
-</span><span class="boring">        Object::builder()
-</span><span class="boring">            .property(&quot;title&quot;, title)
-</span><span class="boring">            .property(&quot;tasks&quot;, tasks)
-</span><span class="boring">            .build()
+</span><span class="boring">    pub fn new(title: String, tasks: gio::ListStore) -&gt; Self {
+</span><span class="boring">        Object::new(&amp;[(&quot;title&quot;, &amp;title), (&quot;tasks&quot;, &amp;tasks)])
 </span><span class="boring">    }
 </span><span class="boring">
 </span><span class="boring">    pub fn tasks(&amp;self) -&gt; gio::ListStore {
@@ -905,7 +902,7 @@ impl ObjectSubclass for CollectionObject {
 </span><span class="boring">        let tasks = gio::ListStore::new(TaskObject::static_type());
 </span><span class="boring">        tasks.extend_from_slice(&amp;tasks_to_extend);
 </span><span class="boring">
-</span><span class="boring">        Self::new(&amp;title, tasks)
+</span><span class="boring">        Self::new(title, tasks)
 </span><span class="boring">    }
 </span><span class="boring">}
 </span><span class="boring">
@@ -936,11 +933,8 @@ pub struct CollectionData {
 </span><span class="boring">}
 </span><span class="boring">
 </span>impl CollectionObject {
-    pub fn new(title: &amp;str, tasks: gio::ListStore) -&gt; Self {
-        Object::builder()
-            .property(&quot;title&quot;, title)
-            .property(&quot;tasks&quot;, tasks)
-            .build()
+    pub fn new(title: String, tasks: gio::ListStore) -&gt; Self {
+        Object::new(&amp;[(&quot;title&quot;, &amp;title), (&quot;tasks&quot;, &amp;tasks)])
     }
 
     pub fn tasks(&amp;self) -&gt; gio::ListStore {
@@ -975,7 +969,7 @@ pub struct CollectionData {
         let tasks = gio::ListStore::new(TaskObject::static_type());
         tasks.extend_from_slice(&amp;tasks_to_extend);
 
-        Self::new(&amp;title, tasks)
+        Self::new(title, tasks)
     }
 }
 <span class="boring">
@@ -1129,7 +1123,7 @@ pub struct Window {
 </span><span class="boring">impl Window {
 </span><span class="boring">    pub fn new(app: &amp;adw::Application) -&gt; Self {
 </span><span class="boring">        // Create new window
-</span><span class="boring">        Object::builder().property(&quot;application&quot;, app).build()
+</span><span class="boring">        Object::new(&amp;[(&quot;application&quot;, app)])
 </span><span class="boring">    }
 </span><span class="boring">
 </span><span class="boring">    fn setup_settings(&amp;self) {
@@ -1540,8 +1534,8 @@ pub struct Window {
 </span><span class="boring">                let tasks = gio::ListStore::new(TaskObject::static_type());
 </span><span class="boring">
 </span><span class="boring">                // Create a new collection object from the title the user provided
-</span><span class="boring">                let title = entry.text().to_string();
-</span><span class="boring">                let collection = CollectionObject::new(&amp;title, tasks);
+</span><span class="boring">                let title = entry.text().into();
+</span><span class="boring">                let collection = CollectionObject::new(title, tasks);
 </span><span class="boring">
 </span><span class="boring">                // Add new collection object and set current tasks
 </span><span class="boring">                window.collections().append(&amp;collection);
@@ -1805,7 +1799,7 @@ To do that it uses the method <code>create_collection_row</code>.</p>
 </span><span class="boring">impl Window {
 </span><span class="boring">    pub fn new(app: &amp;adw::Application) -&gt; Self {
 </span><span class="boring">        // Create new window
-</span><span class="boring">        Object::builder().property(&quot;application&quot;, app).build()
+</span><span class="boring">        Object::new(&amp;[(&quot;application&quot;, app)])
 </span><span class="boring">    }
 </span><span class="boring">
 </span><span class="boring">    fn setup_settings(&amp;self) {
@@ -2216,8 +2210,8 @@ To do that it uses the method <code>create_collection_row</code>.</p>
 </span><span class="boring">                let tasks = gio::ListStore::new(TaskObject::static_type());
 </span><span class="boring">
 </span><span class="boring">                // Create a new collection object from the title the user provided
-</span><span class="boring">                let title = entry.text().to_string();
-</span><span class="boring">                let collection = CollectionObject::new(&amp;title, tasks);
+</span><span class="boring">                let title = entry.text().into();
+</span><span class="boring">                let collection = CollectionObject::new(title, tasks);
 </span><span class="boring">
 </span><span class="boring">                // Add new collection object and set current tasks
 </span><span class="boring">                window.collections().append(&amp;collection);
@@ -2262,7 +2256,7 @@ To do that it uses the method <code>create_collection_row</code>.</p>
 </span><span class="boring">impl Window {
 </span><span class="boring">    pub fn new(app: &amp;adw::Application) -&gt; Self {
 </span><span class="boring">        // Create new window
-</span><span class="boring">        Object::builder().property(&quot;application&quot;, app).build()
+</span><span class="boring">        Object::new(&amp;[(&quot;application&quot;, app)])
 </span><span class="boring">    }
 </span><span class="boring">
 </span><span class="boring">    fn setup_settings(&amp;self) {
@@ -2673,8 +2667,8 @@ To do that it uses the method <code>create_collection_row</code>.</p>
 </span><span class="boring">                let tasks = gio::ListStore::new(TaskObject::static_type());
 </span><span class="boring">
 </span><span class="boring">                // Create a new collection object from the title the user provided
-</span><span class="boring">                let title = entry.text().to_string();
-</span><span class="boring">                let collection = CollectionObject::new(&amp;title, tasks);
+</span><span class="boring">                let title = entry.text().into();
+</span><span class="boring">                let collection = CollectionObject::new(title, tasks);
 </span><span class="boring">
 </span><span class="boring">                // Add new collection object and set current tasks
 </span><span class="boring">                window.collections().append(&amp;collection);
@@ -2722,7 +2716,7 @@ We choose the first one and let the method <code>set_current_collection</code> d
 </span><span class="boring">impl Window {
 </span><span class="boring">    pub fn new(app: &amp;adw::Application) -&gt; Self {
 </span><span class="boring">        // Create new window
-</span><span class="boring">        Object::builder().property(&quot;application&quot;, app).build()
+</span><span class="boring">        Object::new(&amp;[(&quot;application&quot;, app)])
 </span><span class="boring">    }
 </span><span class="boring">
 </span><span class="boring">    fn setup_settings(&amp;self) {
@@ -3133,8 +3127,8 @@ We choose the first one and let the method <code>set_current_collection</code> d
 </span><span class="boring">                let tasks = gio::ListStore::new(TaskObject::static_type());
 </span><span class="boring">
 </span><span class="boring">                // Create a new collection object from the title the user provided
-</span><span class="boring">                let title = entry.text().to_string();
-</span><span class="boring">                let collection = CollectionObject::new(&amp;title, tasks);
+</span><span class="boring">                let title = entry.text().into();
+</span><span class="boring">                let collection = CollectionObject::new(title, tasks);
 </span><span class="boring">
 </span><span class="boring">                // Add new collection object and set current tasks
 </span><span class="boring">                window.collections().append(&amp;collection);
@@ -3185,7 +3179,7 @@ Finally, we select the collection row.</p>
 </span><span class="boring">impl Window {
 </span><span class="boring">    pub fn new(app: &amp;adw::Application) -&gt; Self {
 </span><span class="boring">        // Create new window
-</span><span class="boring">        Object::builder().property(&quot;application&quot;, app).build()
+</span><span class="boring">        Object::new(&amp;[(&quot;application&quot;, app)])
 </span><span class="boring">    }
 </span><span class="boring">
 </span><span class="boring">    fn setup_settings(&amp;self) {
@@ -3596,8 +3590,8 @@ Finally, we select the collection row.</p>
 </span><span class="boring">                let tasks = gio::ListStore::new(TaskObject::static_type());
 </span><span class="boring">
 </span><span class="boring">                // Create a new collection object from the title the user provided
-</span><span class="boring">                let title = entry.text().to_string();
-</span><span class="boring">                let collection = CollectionObject::new(&amp;title, tasks);
+</span><span class="boring">                let title = entry.text().into();
+</span><span class="boring">                let collection = CollectionObject::new(title, tasks);
 </span><span class="boring">
 </span><span class="boring">                // Add new collection object and set current tasks
 </span><span class="boring">                window.collections().append(&amp;collection);
@@ -3643,7 +3637,7 @@ It assures that <code>tasks_list</code> is only visible if the number of tasks i
 </span><span class="boring">impl Window {
 </span><span class="boring">    pub fn new(app: &amp;adw::Application) -&gt; Self {
 </span><span class="boring">        // Create new window
-</span><span class="boring">        Object::builder().property(&quot;application&quot;, app).build()
+</span><span class="boring">        Object::new(&amp;[(&quot;application&quot;, app)])
 </span><span class="boring">    }
 </span><span class="boring">
 </span><span class="boring">    fn setup_settings(&amp;self) {
@@ -4054,8 +4048,8 @@ It assures that <code>tasks_list</code> is only visible if the number of tasks i
 </span><span class="boring">                let tasks = gio::ListStore::new(TaskObject::static_type());
 </span><span class="boring">
 </span><span class="boring">                // Create a new collection object from the title the user provided
-</span><span class="boring">                let title = entry.text().to_string();
-</span><span class="boring">                let collection = CollectionObject::new(&amp;title, tasks);
+</span><span class="boring">                let title = entry.text().into();
+</span><span class="boring">                let collection = CollectionObject::new(title, tasks);
 </span><span class="boring">
 </span><span class="boring">                // Add new collection object and set current tasks
 </span><span class="boring">                window.collections().append(&amp;collection);
@@ -4100,7 +4094,7 @@ It assures that <code>tasks_list</code> is only visible if the number of tasks i
 </span><span class="boring">impl Window {
 </span><span class="boring">    pub fn new(app: &amp;adw::Application) -&gt; Self {
 </span><span class="boring">        // Create new window
-</span><span class="boring">        Object::builder().property(&quot;application&quot;, app).build()
+</span><span class="boring">        Object::new(&amp;[(&quot;application&quot;, app)])
 </span><span class="boring">    }
 </span><span class="boring">
 </span><span class="boring">    fn setup_settings(&amp;self) {
@@ -4511,8 +4505,8 @@ It assures that <code>tasks_list</code> is only visible if the number of tasks i
 </span><span class="boring">                let tasks = gio::ListStore::new(TaskObject::static_type());
 </span><span class="boring">
 </span><span class="boring">                // Create a new collection object from the title the user provided
-</span><span class="boring">                let title = entry.text().to_string();
-</span><span class="boring">                let collection = CollectionObject::new(&amp;title, tasks);
+</span><span class="boring">                let title = entry.text().into();
+</span><span class="boring">                let collection = CollectionObject::new(title, tasks);
 </span><span class="boring">
 </span><span class="boring">                // Add new collection object and set current tasks
 </span><span class="boring">                window.collections().append(&amp;collection);
@@ -4574,7 +4568,7 @@ This action will be activated by a click on the <code>+</code> button as well as
 </span><span class="boring">impl Window {
 </span><span class="boring">    pub fn new(app: &amp;adw::Application) -&gt; Self {
 </span><span class="boring">        // Create new window
-</span><span class="boring">        Object::builder().property(&quot;application&quot;, app).build()
+</span><span class="boring">        Object::new(&amp;[(&quot;application&quot;, app)])
 </span><span class="boring">    }
 </span><span class="boring">
 </span><span class="boring">    fn setup_settings(&amp;self) {
@@ -4985,8 +4979,8 @@ This action will be activated by a click on the <code>+</code> button as well as
 </span><span class="boring">                let tasks = gio::ListStore::new(TaskObject::static_type());
 </span><span class="boring">
 </span><span class="boring">                // Create a new collection object from the title the user provided
-</span><span class="boring">                let title = entry.text().to_string();
-</span><span class="boring">                let collection = CollectionObject::new(&amp;title, tasks);
+</span><span class="boring">                let title = entry.text().into();
+</span><span class="boring">                let collection = CollectionObject::new(title, tasks);
 </span><span class="boring">
 </span><span class="boring">                // Add new collection object and set current tasks
 </span><span class="boring">                window.collections().append(&amp;collection);
@@ -5037,7 +5031,7 @@ Afterwards we navigate forward on our leaflet, which means we navigate to the ta
 </span><span class="boring">impl Window {
 </span><span class="boring">    pub fn new(app: &amp;adw::Application) -&gt; Self {
 </span><span class="boring">        // Create new window
-</span><span class="boring">        Object::builder().property(&quot;application&quot;, app).build()
+</span><span class="boring">        Object::new(&amp;[(&quot;application&quot;, app)])
 </span><span class="boring">    }
 </span><span class="boring">
 </span><span class="boring">    fn setup_settings(&amp;self) {
@@ -5448,8 +5442,8 @@ Afterwards we navigate forward on our leaflet, which means we navigate to the ta
                 let tasks = gio::ListStore::new(TaskObject::static_type());
 
                 // Create a new collection object from the title the user provided
-                let title = entry.text().to_string();
-                let collection = CollectionObject::new(&amp;title, tasks);
+                let title = entry.text().into();
+                let collection = CollectionObject::new(title, tasks);
 
                 // Add new collection object and set current tasks
                 window.collections().append(&amp;collection);
@@ -5500,7 +5494,7 @@ Finally, we connect to a click of the <code>back_button</code> in the task view 
 </span><span class="boring">impl Window {
 </span><span class="boring">    pub fn new(app: &amp;adw::Application) -&gt; Self {
 </span><span class="boring">        // Create new window
-</span><span class="boring">        Object::builder().property(&quot;application&quot;, app).build()
+</span><span class="boring">        Object::new(&amp;[(&quot;application&quot;, app)])
 </span><span class="boring">    }
 </span><span class="boring">
 </span><span class="boring">    fn setup_settings(&amp;self) {
@@ -5911,8 +5905,8 @@ Finally, we connect to a click of the <code>back_button</code> in the task view 
 </span><span class="boring">                let tasks = gio::ListStore::new(TaskObject::static_type());
 </span><span class="boring">
 </span><span class="boring">                // Create a new collection object from the title the user provided
-</span><span class="boring">                let title = entry.text().to_string();
-</span><span class="boring">                let collection = CollectionObject::new(&amp;title, tasks);
+</span><span class="boring">                let title = entry.text().into();
+</span><span class="boring">                let collection = CollectionObject::new(title, tasks);
 </span><span class="boring">
 </span><span class="boring">                // Add new collection object and set current tasks
 </span><span class="boring">                window.collections().append(&amp;collection);
@@ -5958,7 +5952,7 @@ This method ensure when there is at least one collection, the &quot;main&quot; p
 </span><span class="boring">impl Window {
 </span><span class="boring">    pub fn new(app: &amp;adw::Application) -&gt; Self {
 </span><span class="boring">        // Create new window
-</span><span class="boring">        Object::builder().property(&quot;application&quot;, app).build()
+</span><span class="boring">        Object::new(&amp;[(&quot;application&quot;, app)])
 </span><span class="boring">    }
 </span><span class="boring">
 </span><span class="boring">    fn setup_settings(&amp;self) {
@@ -6369,8 +6363,8 @@ This method ensure when there is at least one collection, the &quot;main&quot; p
 </span><span class="boring">                let tasks = gio::ListStore::new(TaskObject::static_type());
 </span><span class="boring">
 </span><span class="boring">                // Create a new collection object from the title the user provided
-</span><span class="boring">                let title = entry.text().to_string();
-</span><span class="boring">                let collection = CollectionObject::new(&amp;title, tasks);
+</span><span class="boring">                let title = entry.text().into();
+</span><span class="boring">                let collection = CollectionObject::new(title, tasks);
 </span><span class="boring">
 </span><span class="boring">                // Add new collection object and set current tasks
 </span><span class="boring">                window.collections().append(&amp;collection);
