--- a/stable/latest/book/g_object_subclassing.html
+++ b/stable/latest/book/g_object_subclassing.html
@@ -175,7 +175,7 @@ impl ButtonImpl for CustomButton {}</code></pre>
 <p>After that, we would have the option to override the virtual methods of our ancestors.
 Since we only want to have a plain button for now, we override nothing.
 We still have to add the empty <code>impl</code> though.
-Next, we describe the public interface of our custom GObject.</p>
+Next, we describe the public interface our custom GObject.</p>
 <p>Filename: <a class=file-link href="https://github.com/gtk-rs/gtk4-rs/blob/master/book/listings/g_object_subclassing/1/custom_button/mod.rs">listings/g_object_subclassing/1/custom_button/mod.rs</a></p>
 <pre><code class="language-rust  no_run noplayground">mod imp;
 
@@ -190,11 +190,11 @@ glib::wrapper! {
 
 impl CustomButton {
     pub fn new() -&gt; Self {
-        Object::builder().build()
+        Object::new(&amp;[])
     }
 
     pub fn with_label(label: &amp;str) -&gt; Self {
-        Object::builder().property(&quot;label&quot;, label).build()
+        Object::new(&amp;[(&quot;label&quot;, &amp;label)])
     }
 }
 <span class="boring">
@@ -256,7 +256,7 @@ fn build_ui(app: &amp;Application) {
 <blockquote>
 <p>Describing objects with two structs is a peculiarity coming from how GObjects are defined in C.
 <code>imp::CustomButton</code> handles the state of the GObject and the overridden virtual methods.
-<code>CustomButton</code> determines the exposed methods from the implemented traits and added methods. </p>
+<code>CustomButton</code> determines the exposed methods be determining the implemented traits and adding methods itself. </p>
 </blockquote>
 <h2 id="adding-functionality"><a class="header" href="#adding-functionality">Adding Functionality</a></h2>
 <p>We are able to use <code>CustomButton</code> as a drop-in replacement for <code>gtk::Button</code>.
