--- a/stable/latest/book/libadwaita.html
+++ b/stable/latest/book/libadwaita.html
@@ -176,14 +176,8 @@ From there, run the following commands:</p>
 <pre><code>cd /
 git clone https://gitlab.gnome.org/GNOME/libadwaita.git --depth 1
 cd libadwaita
-meson setup builddir -Dprefix=C:/gnome -Dintrospection=disabled -Dvapi=false
+meson setup builddir -Dprefix=C:/gnome -Dintrospection=disabled -Dvapi=false -Dexamples=false
 meson install -C builddir
-
-# This is a workaround for https://gitlab.gnome.org/GNOME/gtk/-/issues/5303.
-# NOTE: The cache must be rebuilt every time you add new icons. 
-
-xcopy /s /i C:\gnome\share\icons\hicolor\scalable\apps C:\gnome\share\icons\hicolor\scalable\actions
-gtk4-update-icon-cache.exe -t -f C:\gnome\share\icons\hicolor
 </code></pre>
 
                     </main>
